# kdl-fmt

./: .kdl-fmt.kdl  Cargo.toml  LICENSE  README.md  flake.nix  justfile
.cargo/: config.toml
.github/workflows/: lint.yml  release.yml
src/: config.rs  kdl.rs  lib.rs
src/config/: args.rs  file.rs  mod.rs
tests/: config.kdl
