[package]
name = "kdl-fmt"
description = "Formatting CLI for KDL (v1 & v2) built around kdl-rs"
license = "MIT"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "kdl-fmt"

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
clap-stdin = "0.6.0"
kdl = { version = "6.3.3", features = ["v1", "v1-fallback"] }
miette = { version = "7.5.0", features = ["fancy"] }
rstest = "0.24.0"
test-log = { version = "0.2.17", features = ["trace"] }
thiserror = "2.0.11"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
