[package]
name = "kdl-fmt"
description = "Formatting CLI for KDL (v1 & v2) built around kdl-rs"
license = "MIT"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "kdl-fmt"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
clap-stdin = "0.6.0"
kdl = { version = "6.3.4", features = ["v1", "v1-fallback"] }
miette = { version = "7.6.0", features = ["fancy"] }
rstest = "0.25.0"
test-log = { version = "0.2.18", features = ["trace"] }
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
